kubernetes/apps/security/wazuh/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wazuh-dashboard
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - wazuh.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: wazuh-dashboard
          port: 5601
